--- a/builds/msvc/vs2013/test/libbitcoin_test.props
+++ b/builds/msvc/vs2013/test/libbitcoin_test.props
@@ -38,7 +38,7 @@
   </PropertyGroup>
   
   <PropertyGroup Condition="'$(DefaultLinkage)' == 'dynamic'">
-    <Linkage-mpir>dynamic</Linkage-mpir>
+    <Linkage-mpir>static</Linkage-mpir>
     <Linkage-secp256k1>static</Linkage-secp256k1>
     <Linkage-openssl>dynamic</Linkage-openssl>
     <Linkage-libbitcoin>static</Linkage-libbitcoin>
