--- a/builds/msvc/vs2013/test/libbitcoin_test.props
+++ b/builds/msvc/vs2013/test/libbitcoin_test.props
@@ -21,8 +21,7 @@
       <AdditionalOptions Condition="'$(DebugOrRelease)' == 'Debug'">/OPT:NOLBR /IGNORE:4099 %(AdditionalOptions)</AdditionalOptions>
     </Link>
     <PostBuildEvent>
-      <!-- Run tests after build. -->
-      <!--<Command>$(TargetPath)</Command>-->
+      <Command>"$(TargetPath)" --run_test=* --random=1 --show_progress=yes --result_code=no --detect_memory_leak=0 --report_level=no --build_info=yes</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
 
