--- a/libbitcoin.pc.in
+++ b/libbitcoin.pc.in
@@ -7,8 +7,7 @@ Name: libbitcoin
 Description:  Rewrite bitcoin, make it super-pluggable, very easy to do and hack everything at every level, and very configurable.
 URL: http://libbitcoin.dyne.org
 Version: @PACKAGE_VERSION@
-Requires: libcurl
-Cflags: -I${includedir} -std=c++11 @CFLAG_LEVELDB@
-Libs: -L${libdir} -lbitcoin -lboost_thread -lboost_system -lboost_regex -lboost_filesystem -lpthread -lcurl -lsecp256k1 @LDFLAG_LEVELDB@
-Libs.private: -lcrypto -ldl -lz
+Cflags: -I${includedir} -std=c++11
+Libs: -L${libdir} -lbitcoin -lboost_thread -lboost_system -lboost_regex -lboost_filesystem -lpthread -lsecp256k1
+Libs.private: -ldl
 
