--- a/builds/msvc/vs2013/test/libbitcoin_test.vcxproj
+++ b/builds/msvc/vs2013/test/libbitcoin_test.vcxproj
@@ -70,6 +70,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\..\test\base58.cpp" />
+    <ClCompile Include="..\..\..\..\test\big_number.cpp" />
     <ClCompile Include="..\..\..\..\test\checksum.cpp" />
     <ClCompile Include="..\..\..\..\test\ec_keys.cpp" />
     <ClCompile Include="..\..\..\..\test\format.cpp" />
@@ -81,6 +82,7 @@
     <ClCompile Include="..\..\..\..\test\stealth.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\..\..\test\big_number.hpp" />
     <ClInclude Include="..\..\..\..\test\hash_data\vectors.hpp" />
     <ClInclude Include="..\..\..\..\test\script_json\vectors.hpp" />
   </ItemGroup>
