--- a/builds/msvc/vs2013/test/libbitcoin_test.vcxproj
+++ b/builds/msvc/vs2013/test/libbitcoin_test.vcxproj
@@ -80,7 +80,7 @@
     <ClCompile Include="..\..\..\..\test\key_formats.cpp" />
     <ClCompile Include="..\..\..\..\test\main.cpp" />
     <ClCompile Include="..\..\..\..\test\script.cpp" />
-    <ClCompile Include="..\..\..\..\test\scriptnum.cpp" />
+    <ClCompile Include="..\..\..\..\test\script_number.cpp" />
     <ClCompile Include="..\..\..\..\test\serial.cpp" />
     <ClCompile Include="..\..\..\..\test\stealth.cpp" />
     <ClCompile Include="..\..\..\..\test\stealth_address.cpp" />
