move blockchain/blockchain.cpp to src/ to match blockchain.hpp header interface for consistency.

--- a/Makefile.am
+++ b/Makefile.am
@@ -139,7 +139,7 @@ libbitcoin_la_CPPFLAGS = \
 
 libbitcoin_la_SOURCES = \
     src/address.cpp \
-    src/blockchain/blockchain.cpp \
+    src/blockchain.cpp \
     src/block.cpp \
     src/compat.cpp \
     src/constants.cpp \
