--- a/libbitcoin.pc.in
+++ b/libbitcoin.pc.in
@@ -9,7 +9,7 @@ URL: https://github.com/libbitcoin/libbitcoin
 Version: @PACKAGE_VERSION@
 
 # Our dependencies that publish package configuration.
-Requires: libcrypto >= 1.0.1 libsecp256k1 >= 0.0.1
+Requires: libsecp256k1 >= 0.0.1
 
 # Our own include directory and any other compiler flags we require.
 Cflags: -I${includedir} -std=c++11
