--- a/libbitcoin.pc.in
+++ b/libbitcoin.pc.in
@@ -16,5 +16,5 @@ Cflags: -I${includedir} -std=c++11
 
 # Our own lib and any we require that do not publish package configuration.
 Libs: -L${libdir} -lbitcoin -lgmp -lboost_date_time -lboost_filesystem \
-    -lboost_regex -lboost_system -lboost_unit_test_framework
+    -lboost_regex -lboost_system -lboost_unit_test_framework @rtlib@
 
